--- a/arch/arm/configs/cyanogenmod_phobos_defconfig
+++ b/arch/arm/configs/cyanogenmod_phobos_defconfig
@@ -155,7 +155,6 @@ CONFIG_PROFILING=y
 CONFIG_TRACEPOINTS=y
 CONFIG_OPROFILE=y
 CONFIG_HAVE_OPROFILE=y
-# CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
@@ -177,12 +176,7 @@ CONFIG_HAVE_GENERIC_DMA_COHERENT=y
 CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-CONFIG_MODULES=y
-# CONFIG_MODULE_FORCE_LOAD is not set
-CONFIG_MODULE_UNLOAD=y
-CONFIG_MODULE_FORCE_UNLOAD=y
-# CONFIG_MODVERSIONS is not set
-# CONFIG_MODULE_SRCVERSION_ALL is not set
+# CONFIG_MODULES is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -362,8 +356,8 @@ CONFIG_TEGRA_GADGET_BOOST_CPU_FREQ=800
 CONFIG_TEGRA_DYNAMIC_PWRDET=y
 CONFIG_TEGRA_EDP_EXACT_FREQ=y
 CONFIG_TEGRA_WAKEUP_MONITOR=y
-CONFIG_TEGRA_BB_XMM_POWER=y
-CONFIG_TEGRA_BB_XMM_POWER2=m
+# CONFIG_TEGRA_BB_XMM_POWER is not set
+# CONFIG_TEGRA_BB_XMM_POWER2 is not set
 CONFIG_TEGRA_PLLM_RESTRICTED=y
 # CONFIG_TEGRA_WDT_RECOVERY is not set
 CONFIG_TEGRA_LP2_CPU_TIMER=y
@@ -985,7 +979,6 @@ CONFIG_XPS=y
 # CONFIG_NETPRIO_CGROUP is not set
 CONFIG_BQL=y
 CONFIG_HAVE_BPF_JIT=y
-# CONFIG_BPF_JIT is not set
 
 #
 # Network testing
@@ -1026,7 +1019,7 @@ CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
 CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
-CONFIG_CFG80211=m
+CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_REG_DEBUG is not set
@@ -1035,10 +1028,10 @@ CONFIG_CFG80211_DEFAULT_PS=y
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
 CONFIG_CFG80211_WEXT=y
 # CONFIG_WIRELESS_EXT_SYSFS is not set
-CONFIG_LIB80211=m
+CONFIG_LIB80211=y
 # CONFIG_LIB80211_DEBUG is not set
 # CONFIG_CFG80211_ALLOW_RECONNECT is not set
-CONFIG_MAC80211=m
+CONFIG_MAC80211=y
 CONFIG_MAC80211_HAS_RC=y
 # CONFIG_MAC80211_RC_PID is not set
 CONFIG_MAC80211_RC_MINSTREL=y
@@ -1198,7 +1191,7 @@ CONFIG_EEPROM_AT24=y
 # Texas Instruments shared transport line discipline
 #
 CONFIG_TI_ST=y
-CONFIG_ST_GPS=m
+# CONFIG_ST_GPS is not set
 CONFIG_ST_HCI=y
 CONFIG_ST_HOST_WAKE=y
 # CONFIG_ST_HOST_WAKE_GPS is not set
@@ -1249,7 +1242,6 @@ CONFIG_SCSI_MULTI_LUN=y
 # CONFIG_SCSI_CONSTANTS is not set
 # CONFIG_SCSI_LOGGING is not set
 # CONFIG_SCSI_SCAN_ASYNC is not set
-CONFIG_SCSI_WAIT_SCAN=m
 
 #
 # SCSI Transports
@@ -1548,7 +1540,7 @@ CONFIG_USB_NET_CDC_SUBSET=y
 # CONFIG_USB_IPHETH is not set
 # CONFIG_USB_SIERRA_NET is not set
 # CONFIG_USB_VL600 is not set
-CONFIG_USB_NET_RAW_IP=m
+# CONFIG_USB_NET_RAW_IP is not set
 # CONFIG_USB_NET_SMSC95XX_VOH_MODE is not set
 CONFIG_WLAN=y
 # CONFIG_LIBERTAS_THINFIRM is not set
@@ -1566,9 +1558,9 @@ CONFIG_WLAN=y
 # CONFIG_ATH_COMMON is not set
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
-CONFIG_BCMDHD=m
-CONFIG_BCMDHD_FW_PATH="/data/misc/wifi/firmware/fw_bcmdhd.bin"
-CONFIG_BCMDHD_NVRAM_PATH="/data/misc/wifi/firmware/nvram.txt"
+CONFIG_BCMDHD=y
+CONFIG_BCMDHD_FW_PATH="/system/vendor/firmware/bcm4334/fw_bcmdhd.bin"
+CONFIG_BCMDHD_NVRAM_PATH="/system/etc/nvram_4334.txt"
 # CONFIG_BCMDHD_WEXT is not set
 CONFIG_BCMDHD_CFG80211=y
 # CONFIG_BCMDHD_NOAPI is not set
@@ -1580,39 +1572,18 @@ CONFIG_BCMDHD_HW_OOB=y
 CONFIG_BCMDHD_INSMOD_NO_FW_LOAD=y
 CONFIG_BCMDHD_CUSTOM_REGULATORY_DOMAIN=y
 # CONFIG_BCMDHD_DISABLE_P2P_SYSFS_DEVICE_NODE is not set
-CONFIG_BCMDHD_CLAIM_BCM4325_SDGWB=y
-CONFIG_BCMDHD_CLAIM_BCM4325=y
-CONFIG_BCMDHD_CLAIM_BCM4319=y
-CONFIG_BCMDHD_CLAIM_BCM4330=y
+# CONFIG_BCMDHD_CLAIM_BCM4325_SDGWB is not set
+# CONFIG_BCMDHD_CLAIM_BCM4325 is not set
+# CONFIG_BCMDHD_CLAIM_BCM4319 is not set
+# CONFIG_BCMDHD_CLAIM_BCM4330 is not set
 CONFIG_BCMDHD_CLAIM_BCM4334=y
-CONFIG_BCMDHD_CLAIM_BCM4324=y
-CONFIG_BCMDHD_CLAIM_BCM43239=y
+# CONFIG_BCMDHD_CLAIM_BCM4324 is not set
+# CONFIG_BCMDHD_CLAIM_BCM43239 is not set
 CONFIG_BCMDHD_CLAIM_SDIO_CLASS_NONE=y
-CONFIG_BCM4335=m
-CONFIG_BCM4335_FW_PATH="/data/misc/wifi/firmware/fw_bcmdhd.bin"
-CONFIG_BCM4335_NVRAM_PATH="/data/misc/wifi/firmware/nvram.txt"
-CONFIG_BCM4335_WIFI_CONTROL_FUNC=y
-CONFIG_BCM4335_HW_OOB=y
+# CONFIG_BCM4335 is not set
 # CONFIG_BRCMFMAC is not set
-CONFIG_BCM43XX=m
-CONFIG_BCM43XX_FW_PATH="/system/vendor/firmware/bcm4334/fw_bcmdhd.bin"
-CONFIG_BCM43XX_NVRAM_PATH="/system/etc/nvram_4334.txt"
-# CONFIG_BCM43XX_WEXT is not set
-CONFIG_BCM43XX_CFG80211=y
-# CONFIG_BCM43XX_NOAPI is not set
-CONFIG_BCM43XX_WIFI_CONTROL_FUNC=y
-CONFIG_BCM43XX_HW_OOB=y
-# CONFIG_BCM43XX_CSCAN_ENABLE is not set
-CONFIG_BCM43XX_INSMOD_NO_FW_LOAD=y
-CONFIG_BCM43XX_CUSTOM_REGULATORY_DOMAIN=y
-CONFIG_SD8797=m
-CONFIG_STA_SUPPORT=y
-CONFIG_UAP_SUPPORT=y
-CONFIG_WIFI_DIRECT_SUPPORT=y
-# CONFIG_WIFI_DISPLAY_SUPPORT is not set
-# CONFIG_STA_WEXT is not set
-# CONFIG_UAP_WEXT is not set
-# CONFIG_DEBUG is not set
+# CONFIG_BCM43XX is not set
+# CONFIG_SD8797 is not set
 # CONFIG_HOSTAP is not set
 # CONFIG_IPW2100 is not set
 # CONFIG_IPW2200 is not set
@@ -1629,11 +1600,7 @@ CONFIG_WIFI_DIRECT_SUPPORT=y
 # CONFIG_RTL8192DE is not set
 # CONFIG_RTL8192CU is not set
 # CONFIG_WL1251 is not set
-CONFIG_WL12XX_MENU=m
-CONFIG_WL12XX=m
-# CONFIG_WL12XX_SPI is not set
-CONFIG_WL12XX_SDIO=m
-CONFIG_WL12XX_PLATFORM_DATA=y
+# CONFIG_WL12XX_MENU is not set
 # CONFIG_ZD1211RW is not set
 # CONFIG_MWIFIEX is not set
 
@@ -1922,7 +1889,6 @@ CONFIG_I2C_TEGRA=y
 #
 # Other I2C/SMBus bus drivers
 #
-# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -2317,7 +2283,6 @@ CONFIG_VIDEO_MEDIA=y
 # Multimedia drivers
 #
 # CONFIG_RC_CORE is not set
-# CONFIG_MEDIA_ATTACH is not set
 CONFIG_MEDIA_TUNER=y
 # CONFIG_MEDIA_TUNER_CUSTOMISE is not set
 CONFIG_MEDIA_TUNER_SIMPLE=y
@@ -2928,7 +2893,7 @@ CONFIG_USB_SERIAL_OPTION=y
 # CONFIG_USB_SERIAL_ZIO is not set
 # CONFIG_USB_SERIAL_SSU100 is not set
 # CONFIG_USB_SERIAL_DEBUG is not set
-CONFIG_USB_SERIAL_BASEBAND=m
+# CONFIG_USB_SERIAL_BASEBAND is not set
 
 #
 # USB Miscellaneous drivers
@@ -3181,9 +3146,6 @@ CONFIG_STAGING=y
 # CONFIG_PRISM2_USB is not set
 # CONFIG_ECHO is not set
 # CONFIG_ASUS_OLED is not set
-# CONFIG_R8187SE is not set
-# CONFIG_RTL8192U is not set
-# CONFIG_RTLLIB is not set
 # CONFIG_R8712U is not set
 # CONFIG_RTS_PSTOR is not set
 # CONFIG_RTS5139 is not set
@@ -3191,8 +3153,6 @@ CONFIG_STAGING=y
 # CONFIG_LINE6_USB is not set
 # CONFIG_USB_SERIAL_QUATECH2 is not set
 # CONFIG_USB_SERIAL_QUATECH_USB2 is not set
-# CONFIG_VT6655 is not set
-# CONFIG_VT6656 is not set
 # CONFIG_VME_BUS is not set
 # CONFIG_DX_SEP is not set
 CONFIG_IIO=y
@@ -3330,7 +3290,6 @@ CONFIG_SENSORS_ISL29028=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_CRYSTALHD is not set
 # CONFIG_FB_XGI is not set
-# CONFIG_USB_ENESTORAGE is not set
 # CONFIG_BCM_WIMAX is not set
 # CONFIG_FT1000 is not set
 
@@ -3690,6 +3649,7 @@ CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=32768
 CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_BOOTPARAM=y
+CONFIG_SECURITY_SELINUX_BOOTPARAM_VALUE=1
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
@@ -3728,7 +3688,6 @@ CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 CONFIG_CRYPTO_WORKQUEUE=y
 # CONFIG_CRYPTO_CRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
-CONFIG_CRYPTO_TEST=m
 
 #
 # Authenticated Encryption with Associated Data
